# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/asset/config.gni")
import("//build/ohos.gni")

rust_cxx("secure_access_fence_wrapper_cxx") {
  sources = [ "src/wrapper.rs" ]
}

ohos_static_library("secure_access_fence_wrapper_static") {

  public_configs = [ "../../../frameworks/secure_access_fence/inner_api/ipc:saf_idl_config" ]

  include_dirs = [
    "include",
    "src/cxx/inc",
    "${target_gen_dir}",
    "${target_gen_dir}/src",
    "../os_dependency/inc",
    "../../../frameworks/secure_access_fence/inner_api/agent_fence/inc",
    "../../../frameworks/secure_access_fence/inner_api/ipc",
    "../../../frameworks/secure_access_fence/os_dependency/log/inc",
    "../../../interfaces/inner_kits/c/secure_access_fence/agent_fence/inc",
    "../../../interfaces/inner_kits/c/secure_access_fence/common/inc",
  ]
  sources = [
    "src/cxx/secure_access_fence_ipc.cpp",
    "src/cxx/src/secure_access_fence_service.cpp",
    "src/cxx/src/permission_manager.cpp"
  ]
  sources += get_target_outputs(":secure_access_fence_wrapper_cxx")

  deps = [
    ":secure_access_fence_wrapper_cxx",
    "../os_dependency:saf_os_dependency",
    "../../../frameworks/secure_access_fence/inner_api/ipc:secure_access_fence_stub",
    "../../../frameworks/secure_access_fence/inner_api/ipc:secure_access_fence_interface",
  ]

  external_deps = [
    "ability_runtime:cli_tool_client",
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "cJSON:cjson",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
    "rust_cxx:cxx_cppdeps",
  ]

  sanitize = {
    integer_overflow = true
    cfi = true
    debug = false
    cfi_cross_dso = true
    boundary_sanitize = true
    ubsan = true
  }

  subsystem_name = "security"
  part_name = "asset"

}

ohos_rust_shared_library("secure_access_fence_service") {
  sources = [ "src/lib.rs" ]
  deps = [
    ":secure_access_fence_wrapper_static",
    "../../../etc/init:secure_access_fence.rc",
    "../../../frameworks/secure_access_fence/inner_api/ipc:saf_ipc",
    "../../../frameworks/secure_access_fence/inner_api/ipc:secure_access_fence_stub",
    "../../../frameworks/secure_access_fence/inner_api/ipc:secure_access_fence_interface",
    "../../../frameworks/secure_access_fence/definition:saf_definition",
    "../../../frameworks/secure_access_fence/os_dependency/log:saf_log",
    "../../../interfaces/inner_kits/plugin_interface/secure_access_fence:saf_plugin_interface_rust",
    "../../../interfaces/inner_kits/rs/secure_access_fence:saf_sdk_rust",
    "../../../interfaces/inner_kits/c/secure_access_fence/agent_fence:saf_agent_fence",
    "../common:saf_common",
    "../os_dependency:saf_os_dependency",
    "../plugin:saf_plugin",
  ]

  external_deps = [
    "hilog:hilog_rust",
    "hilog:libhilog",
    "hisysevent:hisysevent_rust",
    "hitrace:hitrace_meter_rust",
    "ipc:ipc_rust",
    "safwk:system_ability_fwk_rust",
    "samgr:samgr_rust",
    "ylong_runtime:ylong_runtime",
    "ylong_json:lib",
    "rust_cxx:lib",
  ]

  crate_name = "secure_access_fence_service"
  crate_type = "dylib"
  subsystem_name = "security"
  part_name = "asset"
}
