# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "saf_core_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hilog_rust = { git = "https://gitcode.com/openharmony/hiviewdfx_hilog.git" }
samgr = { git = "https://gitcode.com/openharmony/systemabilitymgr_samgr.git" }
system_ability_fwk = { git = "https://gitcode.com/openharmony/systemabilitymgr_safwk" }
hisysevent = { git = "https://gitcode.com/openharmony/hiviewdfx_hisysevent.git" }
ipc = { git = "https://gitcode.com/openharmony/communication_ipc" }
ylong_runtime = { git = "https://gitcode.com/openharmony/commonlibrary_rust_ylong_runtime.git", features = ["full"] }
ylong_json = { git = "https://gitcode.com/openharmony/commonlibrary_rust_ylong_json.git" }

saf_common = { path = "../common" }
saf_definition = { path = "../../../frameworks/secure_access_fence/definition" }
saf_ipc = { path = "../../../frameworks/secure_access_fence/inner_api/ipc" }
saf_log = { path = "../../../frameworks/secure_access_fence/os_dependency/log" }
saf_plugin = { path = "../plugin" }
saf_plugin_interface = { path = "../../../interfaces/inner_kits/plugin_interface/secure_access_fence" }
saf_sdk = { path = "../../../interfaces/inner_kits/rs/secure_access_fence" }
lazy_static = "1.0.0"
