# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "saf_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ylong_runtime = { git = "https://gitcode.com/openharmony/commonlibrary_rust_ylong_runtime.git", features = ["full"] }

saf_common = { path = "../common" }
saf_definition = { path = "../../../frameworks/secure_access_fence/definition" }
saf_log = { path = "../../../frameworks/secure_access_fence/os_dependency/log" }
saf_sdk = { path = "../../../interfaces/inner_kits/rs/secure_access_fence" }
saf_plugin_interface = { path = "../../../interfaces/inner_kits/plugin_interface/secure_access_fence" }