# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

module_output_path = "asset/asset"

ohos_unittest("saf_agent_fence_test") {
  module_out_path = module_output_path
  subsystem_name = "security"
  part_name = "asset"

  include_dirs = [
    "inc",
    "../../../interfaces/inner_kits/c/secure_access_fence/agent_fence/inc",
    "../../../frameworks/secure_access_fence/inner_api/ipc",
    "../../../frameworks/secure_access_fence/os_dependency/log/inc",
  ]

  sources = [
    "src/saf_agent_fence_test.cpp",
  ]

  deps = [
    "../../../frameworks/secure_access_fence/inner_api/agent_fence/inc",
    "../../../interfaces/inner_kits/c/secure_access_fence/agent_fence:saf_agent_fence",
    "../../../frameworks/secure_access_fence/inner_api/ipc:secure_access_fence_proxy",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]
}