# Copyright (c) 2023-2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/idl_tool/idl.gni")
import("//build/ohos.gni")

config("saf_idl_config") {
  include_dirs = [ "${target_gen_dir}" ]
}

idl_gen_interface("secure_access_fence_interface") {
  sources = [ "ISecureAccessFence.idl" ]
  sources_common = [ "SecureAccessFenceType.idl" ]

  log_domainid = "0xD002F21"
  log_tag = "SAF_IPC"
  subsystem_name = "security"
  part_name = "asset"
}

ohos_static_library("secure_access_fence_proxy") {
  public_configs = [ ":saf_idl_config" ]

  output_values = get_target_outputs(":secure_access_fence_interface")
  sources = filter_include(output_values, [ "*secure_access_fence_proxy.cpp" ])
  sources += filter_include(output_values, [ "*secure_access_fence_type.cpp" ])

  deps = [ ":secure_access_fence_interface" ]

  external_deps = [
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  sanitize = {
    integer_overflow = true
    cfi = true
    debug = false
    cfi_cross_dso = true
    boundary_sanitize = true
    ubsan = true
  }

  subsystem_name = "security"
  part_name = "asset"
}

ohos_static_library("secure_access_fence_stub") {
  public_configs = [ ":saf_idl_config" ]

  output_values = get_target_outputs(":secure_access_fence_interface")
  sources = filter_include(output_values, [ "*secure_access_fence_stub.cpp" ])
  sources += filter_include(output_values, [ "*secure_access_fence_type.cpp" ])

  deps = [ ":secure_access_fence_interface" ]

  external_deps = [
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  sanitize = {
    integer_overflow = true
    cfi = true
    debug = false
    cfi_cross_dso = true
    boundary_sanitize = true
    ubsan = true
  }

  subsystem_name = "security"
  part_name = "asset"
}

ohos_rust_static_library("saf_ipc") {
  sources = [ "src/lib.rs" ]
  deps = [
    "../../definition:saf_definition",
    "../../os_dependency/log:saf_log",
  ]
  external_deps = [ "ipc:ipc_rust" ]

  crate_name = "saf_ipc"
  crate_type = "rlib"
  subsystem_name = "security"
  part_name = "asset"
}
